# feed-to-sqlite

./: .gitignore  .travis.yml  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml  test.yml
feed_to_sqlite/: __init__.py  cli.py  ingest.py
tests/: instapaper.xml  newsblur.xml  test_cli.py  test_ingest_feed.py
